[package]
name = "tap-plugin-exif"
version = "0.1.0"
authors = ["sjacob <sjacob@git.lrp>"]
edition = "2021"

[dependencies]
tap = { version="0.1.0", git="https://github.com/tap-ir/tap.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
log = { version = "0.4", features = ["std", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
kamadak-exif = "0.5.1"
Inflector = "0.11.4"
anyhow = { version = "1.0.40"}
